feat(deploy): add FutarchyArbExecutorV5 deploy+verify script and wrapper
- Compile with solc via-IR and optimizer 200
- Deploy using env-provided routers/proposal and PRIVATE_KEY
- Verify on GnosisScan with standard-json-input and retry on indexing lag
- Save deployment records under deployments/ folder
- Update .gitignore to ignore build/, deployments/, temp/ and root v5 deployment JSONs

Security: ensure env files remain gitignored; avoid committing deployment artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,9 @@ eip7702_env/
 
 # Claude-specific files
 # .claude/
+
+# Build and deployment artifacts
+build/
+deployments/
+deployment_executor_v5_*.json
+temp/
