chore(gitignore): ignore logs (*.log, balancer_logs.txt) and node_modules

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,12 @@ temp/
 
 # Configuration files with potential private keys
 config/*.json
+
+# Logs
+*.log
+*.log.*
+balancer_logs.txt
+
+# Node.js
+node_modules/
+**/node_modules/
